--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
-        "laravelcollective/html": "^5.3.0"
+        "laravelcollective/html": "^5.3.0",
+        "cviebrock/eloquent-sluggable": "^4.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
